--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.immutables</groupId>
+			<artifactId>annotate</artifactId>
+			<version>${immutables.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>${mapstruct.version}</version>
@@ -77,6 +83,11 @@
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
